add swagger update gudang
