# docs/swagger.json
@@ -13,6 +13,179 @@
     "host": "inventorymuseum-de54c3e9b901.herokuapp.com",
     "basePath": "/api",
     "paths": {
+        "/gudang": {
+            "get": {
+                "description": "Mengambil seluruh data gudang dari database MongoDB",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan (Gudang)"
+                ],
+                "summary": "Get All Gudang",
+                "responses": {
+                    "200": {
+                        "description": "Berhasil mengambil semua data gudang",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Menambahkan data gudang baru ke dalam sistem",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan (Gudang)"
+                ],
+                "summary": "Insert Gudang",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nama Gudang",
+                        "name": "nama_gudang",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Data gudang berhasil ditambahkan",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/gudang/{id}": {
+            "get": {
+                "description": "Mengambil data gudang berdasarkan ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan (Gudang)"
+                ],
+                "summary": "Get Gudang by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Gudang",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data gudang berhasil ditemukan",
+                        "schema": {
+                            "$ref": "#/definitions/model.Gudang"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Memperbarui data gudang berdasarkan ID",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan (Gudang)"
+                ],
+                "summary": "Update Gudang by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Gudang",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Nama Gudang",
+                        "name": "nama_gudang",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data gudang berhasil diperbarui",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Menghapus data gudang berdasarkan ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Tempat Penyimpanan (Gudang)"
+                ],
+                "summary": "Delete Gudang by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Gudang",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data gudang berhasil dihapus",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/kategori": {
             "get": {
                 "description": "Mengambil semua data kategori koleksi",
@@ -611,7 +784,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Rak)"
                 ],
                 "summary": "Get All Rak",
                 "responses": {
@@ -637,7 +810,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Rak)"
                 ],
                 "summary": "Insert Rak",
                 "parameters": [
@@ -670,7 +843,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Rak)"
                 ],
                 "summary": "Get Rak by ID",
                 "parameters": [
@@ -705,7 +878,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Rak)"
                 ],
                 "summary": "Update Rak",
                 "parameters": [
@@ -743,7 +916,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Rak)"
                 ],
                 "summary": "Delete Rak by ID",
                 "parameters": [
@@ -778,7 +951,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Tahap)"
                 ],
                 "summary": "Get All Tahap",
                 "responses": {
@@ -804,7 +977,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Tahap)"
                 ],
                 "summary": "Insert Tahap",
                 "parameters": [
@@ -837,7 +1010,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Tahap)"
                 ],
                 "summary": "Get Tahap by ID",
                 "parameters": [
@@ -872,7 +1045,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Tahap)"
                 ],
                 "summary": "Update Tahap",
                 "parameters": [
@@ -910,7 +1083,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Data Tempat Penyimpanan"
+                    "Data Tempat Penyimpanan (Tahap)"
                 ],
                 "summary": "Delete Tahap by ID",
                 "parameters": [
@@ -1283,6 +1456,17 @@
                 "message": {
                     "type": "string",
                     "example": "User ditemukan"
+                }
+            }
+        },
+        "model.Gudang": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "nama_gudang": {
+                    "type": "string"
                 }
             }
         },
